[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-audit"
version = "0.2.0"
description = "RLM-powered .NET security audit tool using DSPy and local repo tools"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
keywords = ["security", "audit", "dotnet", "dspy", "rlm", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "dspy-ai>=3.1.3",
]

[project.urls]
Homepage = "https://github.com/mitkox/megacode"
Repository = "https://github.com/mitkox/megacode"
Issues = "https://github.com/mitkox/megacode/issues"

[project.scripts]
security-audit = "audit:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[tool.setuptools]
py-modules = ["audit"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
